# MATLIB-MINI

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
include/: base.hh  concepts.hh  config.hh  format.hh  matlib.cc  matlib.hh
src/: main.cc
src/core/: main.cc  test.cc
tests/: test_matrix.cc
